--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -56,7 +56,12 @@
   color: white;
   text-shadow: -1px -1px 0 #000, 0 -1px 0 #000, 1px -1px 0 #000, 1px 0 0 #000,
     1px 1px 0 #000, 0 1px 0 #000, -1px 1px 0 #000, -1px 0 0 #000;
-  margin-left: 10px;
+  margin-left: 5px;
+}
+
+.btn-container .fa-solid {
+  width: 26px;
+  height: 26px;
 }
 
 .todo-name {
@@ -66,6 +71,7 @@
   display: flex;
   flex: 1;
   transition: all 0.3s;
+  color: white;
 }
 
 .todo-name textarea {
@@ -82,15 +88,21 @@
   transition: all 0.3s;
 }
 
+.main-name {
+  text-shadow: -1px -1px 0 #000, 0 -1px 0 #000, 1px -1px 0 #000, 1px 0 0 #000,
+    1px 1px 0 #000, 0 1px 0 #000, -1px 1px 0 #000, -1px 0 0 #000;
+  color: inherit;
+}
+
 .todo-text {
   height: auto;
   padding-left: 2px;
 }
 
 .height-adjuster {
-  color: transparent;
+  color: transparent !important;
   overflow: auto;
-  position: absolute;
+  position: fixed;
   margin-right: inherit;
   overflow-wrap: anywhere;
   padding-left: 2px;
@@ -99,7 +111,8 @@
   /* Hide scrollbar */
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
-  top: 0;
+  top: 0px;
+  z-index: -1000;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
