--- a/src/components/TodoListApp.css
+++ b/src/components/TodoListApp.css
@@ -57,6 +57,7 @@
   font-size: 20px;
   text-shadow: -1px -1px 0 #000, 0 -1px 0 #000, 1px -1px 0 #000, 1px 0 0 #000,
     1px 1px 0 #000, 0 1px 0 #000, -1px 1px 0 #000, -1px 0 0 #000;
+  color: white;
 }
 
 mark.red {
